--- a/FinanceTracker/app/src/main/res/layout/activity_main.xml
+++ b/FinanceTracker/app/src/main/res/layout/activity_main.xml
@@ -34,22 +34,13 @@
                     android:text="@string/app_name"
                     android:textSize="20dp"
                     android:textStyle="bold" />
-                <ImageView
-                    android:id="@+id/hamburger"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:contentDescription="@string/app_name"
-                    android:src="@drawable/hamburger"
-                    android:layout_marginEnd="20dp"
-
-                    />
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
         <fragment
-            android:id="@+id/transactionListFragment"
+            android:id="@+id/navHostFragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:defaultNavHost="true"
             app:navGraph="@navigation/nav"
             />
@@ -60,6 +51,7 @@
         android:id="@+id/nav"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="end"
+        app:menu="@menu/navigation_menu"
+        android:layout_gravity="start"
         />
 </androidx.drawerlayout.widget.DrawerLayout>
