Export and Currency function

--- a/FinanceTracker/app/src/main/res/layout/fragment_category_lists.xml
+++ b/FinanceTracker/app/src/main/res/layout/fragment_category_lists.xml
@@ -18,9 +18,10 @@
         android:clickable="true"
         android:focusable="true"
         android:src="@drawable/ic_add"
+        app:borderWidth="0dp"
         android:tintMode="@android:color/white"
         android:backgroundTint="@color/primary"
-        android:contentDescription="Add Category"
+        android:contentDescription="@string/add_category"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="24dp"
