--- a/FinanceTracker/app/src/main/res/layout/activity_main.xml
+++ b/FinanceTracker/app/src/main/res/layout/activity_main.xml
@@ -28,11 +28,13 @@
                 >
                 <TextView
                     android:id="@+id/appTitle"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_marginEnd="70dp"
                     android:text="@string/app_name"
-                    android:textSize="20dp"
+                    android:textAlignment="center"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
