--- a/FinanceTracker/app/src/main/res/layout/category_layout.xml
+++ b/FinanceTracker/app/src/main/res/layout/category_layout.xml
@@ -1,38 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/category_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:id="@+id/category_layout"
+    android:background="@drawable/transaction_bg"
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginTop="10dp"
+    android:paddingStart="20dp"
+    android:paddingEnd="20dp"
+    android:paddingBottom="15dp"
+    android:paddingTop="15dp"
     >
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/category_color"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@color/primary"
+        android:layout_gravity="center"
+        />
+    <TextView
+        android:id="@+id/category_name"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@drawable/transaction_bg"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        android:paddingStart="20dp"
-        android:paddingBottom="15dp"
-        android:paddingTop="15dp"
-        >
-        <TextView
-            android:id="@+id/category_color"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@color/primary"
-            android:layout_gravity="center"
-            />
-        <TextView
-            android:id="@+id/category_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:layout_gravity="center"
-            android:textSize="20sp"
-            android:text="Category"
-            android:layout_weight="1"/>
-    </LinearLayout>
+        android:textAlignment="center"
+        android:layout_gravity="center"
+        android:textSize="15sp"
+        android:text="@string/category"
+        android:layout_weight="1"/>
 </LinearLayout>
