--- a/FinanceTracker/app/src/main/res/layout/fragment_add_category.xml
+++ b/FinanceTracker/app/src/main/res/layout/fragment_add_category.xml
@@ -3,64 +3,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".transactions.create.AddTransactionFragment"
     android:orientation="vertical"
-    >
+    tools:context=".categories.AddCategoryFragment">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add Category"
-        android:textAlignment="center"
-        android:textSize="30dp"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp"
-        />
+        android:text="@string/add_category"
+        android:textAlignment="center"
+        android:textSize="25sp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="20dp"
-        >
+        android:orientation="horizontal">
+
         <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginEnd="10dp"
-            >
+            android:layout_weight="1">
+
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/category_name_add"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="25dp"
                 android:backgroundTint="#fff"
-                android:hint="Name"
+                android:hint="@string/name"
                 android:inputType="text"
-                />
+                android:textSize="20sp" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <TextView
             android:id="@+id/category_color_add"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@color/primary"
             android:layout_gravity="center"
             android:layout_marginEnd="10dp"
-            />
+            android:background="@color/primary" />
     </LinearLayout>
+
     <Button
         android:id="@+id/add_category_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/primary"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:text="ADD"
-        android:textColor="#000"
-        android:textSize="20dp"
+        android:backgroundTint="@color/primary"
         android:padding="10dp"
-        android:shadowRadius="2"
         android:shadowDx="4"
         android:shadowDy="4"
-        />
+        android:shadowRadius="2"
+        android:text="@string/add_button"
+        android:textColor="#000"
+        android:textSize="15sp" />
 
 </LinearLayout>
