--- a/FinanceTracker/app/src/main/res/layout/fragment_transaction_lists.xml
+++ b/FinanceTracker/app/src/main/res/layout/fragment_transaction_lists.xml
@@ -1,116 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".transactions.read.TransactionListsFragment">
+    tools:context=".transactions.TransactionListsFragment"
+    >
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-        <TextView
-            android:id="@+id/total"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            android:text="@string/total"
-            android:paddingTop="20dp"
-            android:paddingBottom="10dp"
-            android:shadowColor="@color/shadow_text"
-            android:shadowDx="2"
-            android:shadowDy="2"
-            android:shadowRadius="2"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/circles"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:baselineAligned="false">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center">
-            <TextView
-                android:id="@+id/expense"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textAlignment="center"
-                android:textSize="20sp"
-                android:background="@drawable/circle"
-                android:text="@string/expense"
-                android:gravity="center"
-                android:paddingTop="20dp"
-                android:paddingBottom="10dp"
-                android:shadowColor="@color/shadow_text"
-                android:shadowDx="2"
-                android:shadowDy="2"
-                android:shadowRadius="2"
-                android:textColor="@color/red"
-                />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center">
-            <TextView
-                android:id="@+id/income"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textAlignment="center"
-                android:textSize="20sp"
-                android:background="@drawable/circle"
-                android:text="@string/income"
-                android:gravity="center"
-                android:paddingTop="20dp"
-                android:paddingBottom="10dp"
-                android:shadowColor="@color/shadow_text"
-                android:shadowDx="2"
-                android:shadowDy="2"
-                android:shadowRadius="2"
-                android:textColor="@color/green"
-                />
-        </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/transactions_list_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="ALL TIME"
-            android:textSize="25dp"
-            android:gravity="center_vertical"
-            android:layout_weight="1"
-            android:layout_marginStart="20dp"
-            />
-        <ImageView
-            android:id="@+id/ic_add_transactions"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:contentDescription="Add Transactions"
-            android:src="@drawable/add_icon"
-            android:layout_marginEnd="10dp"
-            />
-    </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/transactions_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-       />
-</LinearLayout>
+        android:orientation="vertical"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:id="@+id/total"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                android:text="@string/total"
+                android:paddingTop="20dp"
+                android:paddingBottom="10dp"
+                android:shadowColor="@color/shadow_text"
+                android:shadowDx="2"
+                android:shadowDy="2"
+                android:shadowRadius="2"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/circles"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:baselineAligned="false">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center">
+                <TextView
+                    android:id="@+id/expense"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:textAlignment="center"
+                    android:textSize="18sp"
+                    android:background="@drawable/circle"
+                    android:text="@string/expense"
+                    android:gravity="center"
+                    android:shadowColor="@color/shadow_text"
+                    android:shadowDx="2"
+                    android:shadowDy="2"
+                    android:shadowRadius="2"
+                    android:textColor="@color/red"
+                    android:padding="20dp"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center">
+                <TextView
+                    android:id="@+id/income"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:textAlignment="center"
+                    android:textSize="18sp"
+                    android:background="@drawable/circle"
+                    android:text="@string/income"
+                    android:gravity="center"
+                    android:shadowColor="@color/shadow_text"
+                    android:shadowDx="2"
+                    android:shadowDy="2"
+                    android:shadowRadius="2"
+                    android:textColor="@color/green"
+                    android:padding="20dp"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/transactions_list_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/transactions_list"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            />
+    </LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/ic_add_transactions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:src="@drawable/ic_add"
+        android:tintMode="@android:color/white"
+        app:borderWidth="0dp"
+        android:backgroundTint="@color/primary"
+        android:contentDescription="@string/add_transactions"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        />
+</androidx.constraintlayout.widget.ConstraintLayout>
