--- a/FinanceTracker/app/src/main/res/layout/transaction_layout.xml
+++ b/FinanceTracker/app/src/main/res/layout/transaction_layout.xml
@@ -30,6 +30,7 @@
             android:layout_height="wrap_content"
             android:textSize="15sp"
             android:textColor="@color/black"
+            android:text="@string/name"
             />
 
         <TextView
@@ -38,6 +39,7 @@
             android:layout_height="wrap_content"
             android:textSize="15sp"
             android:textColor="@color/black"
+            android:text="@string/date"
             />
 
         <TextView
@@ -46,6 +48,7 @@
             android:layout_height="wrap_content"
             android:textSize="15sp"
             android:textColor="@color/black"
+            android:text="@string/category"
             />
 
     </LinearLayout>
@@ -60,6 +63,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            android:text="@string/amount"
+            />
     </LinearLayout>
 </LinearLayout>
