--- a/FinanceTracker/app/src/main/res/layout/fragment_add_category.xml
+++ b/FinanceTracker/app/src/main/res/layout/fragment_add_category.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".categories.AddCategoryFragment">
+    tools:context=".view.categories.AddCategoryFragment">
 
     <TextView
         android:layout_width="match_parent"
@@ -47,19 +47,26 @@
             android:background="@color/primary" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/add_category_btn"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:backgroundTint="@color/primary"
-        android:padding="10dp"
-        android:shadowDx="4"
-        android:shadowDy="4"
-        android:shadowRadius="2"
-        android:text="@string/add_button"
-        android:textColor="#000"
-        android:textSize="15sp" />
-
+        android:gravity="center"
+        android:paddingBottom="10dp"
+        android:paddingTop="20dp"
+        >
+        <Button
+            android:id="@+id/add_category_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/primary"
+            android:shadowDx="4"
+            android:shadowDy="4"
+            android:shadowRadius="2"
+            android:text="@string/add_button"
+            android:textColor="#000"
+            android:textSize="15sp"
+            style="?android:attr/buttonBarButtonStyle"
+            />
+    </LinearLayout>
 </LinearLayout>
