--- a/FinanceTracker/app/src/main/res/layout/fragment_category_lists.xml
+++ b/FinanceTracker/app/src/main/res/layout/fragment_category_lists.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".categories.CategoryListsFragment">
+    tools:context=".view.categories.CategoryListsFragment">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/categories_list"
         android:layout_width="match_parent"
