--- a/FinanceTracker/app/src/main/res/layout/fragment_currency.xml
+++ b/FinanceTracker/app/src/main/res/layout/fragment_currency.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".currency.CurrencyFragment">
+    tools:context=".view.currency.CurrencyFragment">
 
     <Spinner
         android:id="@+id/currency_setting"
