--- a/FinanceTracker/app/src/main/res/layout/fragment_update_category.xml
+++ b/FinanceTracker/app/src/main/res/layout/fragment_update_category.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".categories.UpdateCategoryFragment"
+    tools:context=".view.categories.UpdateCategoryFragment"
     android:orientation="vertical"
     >
     <TextView
